# omniglue-local-demo

./: .gitignore  CLAUDE.md  OmniGlue: Generalizable Feature Matching with Foundation Model Guidance.txt  README.md  download_model.py  gradio_demo.py  pyproject.toml
