[project]
name = "omniglue"
description = "Official code release for CVPR'24 paper 'OmniGlue: Generalizable Feature Matching with Foundation Model Guidance'"
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
authors = [{name = "OmniGlue authors"}]
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Intended Audience :: Science/Research",
]
keywords = ["feature matching"]
version = "1.0.0"
dependencies = [
    "gdown>=5.2.0",
    "gradio>=4.44.1",
    "matplotlib>=3.7.5",
    "numpy<2",
    "opencv-python>=4.11.0.86",
    "pillow>=10.4.0",
    "tensorflow-macos>=2.11.0 ; sys_platform == 'darwin'",
    "tensorflow>=2.11.1 ; sys_platform != 'darwin'",
    "torch>=2.5.1",
]

[project.urls]
homepage = "https://github.com/google-research/omniglue"
repository = "https://github.com/google-research/omniglue"
changelog = "https://github.com/google-research/omniglue/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
where = ["src", "third_party"]
include = ["omniglue*", "dinov2*"]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-xdist",
    "pylint>=2.6.0",
    "pyink",
]

[tool.pyink]
line-length = 80
unstable = true
pyink-indentation = 2
pyink-use-majority-quotes = true

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
